--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Carina Sabonetes Artesanais</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
   </head>
